# mock-grpc

./: .gitignore  Cargo.toml  build.rs
protos/mock/: mock.proto
src/: client.rs  main.rs  server.rs
