[package]
name = "mock-grpc"
version = "0.1.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "stream", "sync", "time"] }
tonic = { version = "0.2", features = ["transport", "tls"] }
async-stream = "0.2"
futures = "0.3.5"
prost = "0.6"
chrono = "0.4"
anyhow = "1.0"

[build-dependencies]
grpc-build = "0.0.5"