[package]
name = "mock-grpc"
version = "0.1.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tracing-subscriber = "0.3.9"
tokio = { version = "1.17.0", features = ["full"] }
tonic = { version = "0.6.2", features = ["transport", "tls"] }
async-stream = "0.3.3"
futures = "0.3.21"
prost = "0.9"
chrono = "0.4"
anyhow = "1.0"
structopt = "0.3"

[build-dependencies]
grpc-build = "0.4.0"